--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@giantmachines/redux-websocket": "^1.5.1",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
